--- a/Fased/Builds/VisualStudio2022/Fased_SharedCode.vcxproj
+++ b/Fased/Builds/VisualStudio2022/Fased_SharedCode.vcxproj
@@ -139,6 +139,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\BiquadFilter.cpp"/>
     <ClCompile Include="..\..\Source\PluginProcessor.cpp"/>
     <ClCompile Include="..\..\Source\KnobComponent.cpp"/>
     <ClCompile Include="..\..\Source\PluginEditor.cpp"/>
@@ -2824,6 +2825,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_gui_extra.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\BiquadFilter.hpp"/>
     <ClInclude Include="..\..\Source\PluginProcessor.h"/>
     <ClInclude Include="..\..\Source\KnobComponent.hpp"/>
     <ClInclude Include="..\..\Source\PluginEditor.h"/>
