--- a/Fased/Builds/VisualStudio2022/Fased_SharedCode.vcxproj.filters
+++ b/Fased/Builds/VisualStudio2022/Fased_SharedCode.vcxproj.filters
@@ -3573,19 +3573,19 @@
     <ClInclude Include="..\..\Source\FreqResponseComponent.hpp">
       <Filter>Fased\Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Source\SelectorComponent.hpp">
+    <ClInclude Include="..\..\Source\PluginEditor.hpp">
+      <Filter>Fased\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\PluginProcessor.hpp">
       <Filter>Fased\Source</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\BiquadFilter.hpp">
       <Filter>Fased\Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Source\PluginProcessor.h">
-      <Filter>Fased\Source</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Source\KnobComponent.hpp">
       <Filter>Fased\Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Source\PluginEditor.h">
+    <ClInclude Include="..\..\Source\SelectorComponent.hpp">
       <Filter>Fased\Source</Filter>
     </ClInclude>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h">
